# wypas-auth-legacy

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.ci  Makefile.am  README.md  build.sh  config.h  config.json.dist  config.lua  config.lua.dist  configmanager.cpp  configmanager.h  configure.ac  connection.cpp  connection.h  database.cpp  database.h  databasemysql.cpp  definitions.h  dispatcher.cpp  dispatcher.h  gameservers.cpp  gameservers.h  httplogin.cpp  httplogin.h  io.cpp  io.h  networkmessage.h  otlogin.cpp  otpch.h  otsystem.h  outputmessage.cpp  protocollogin.cpp  protocollogin.h  protocolold.cpp  scheduler.cpp  scheduler.h  (+11 more)
.github/workflows/: build.yml
src/: configmanager.cpp  configmanager.h  database.cpp  database.h  definitions.h  otlogin.cpp  otpch.h  otsystem.h  scheduler.h  textlogger.cpp  textlogger.h  tools.cpp  tools.h
src/io/: io.cpp  io.h  worlds.cpp  worlds.h
src/net/: connection.cpp  connection.h  networkmessage.cpp  server.cpp  server.h
src/protocol/: protocol.cpp  protocol.h  protocollogin.cpp
